# CppCourse

./: README.md
AccountAndPlayer/: CMakeLists.txt  account.cpp  account.h  accountManager.cpp  accountManager.h  filename.txt  food.cpp  food.h  main.cpp  management.cpp  management.h  movie.cpp  movie.h  movies.cpp  movies.h  onlineTv.cpp  onlineTv.h  player.cpp  player.h  taxi.cpp  taxi.h
HomeWorkStruct/: main.cpp
MatrixClass/: CMakeLists.txt  info.cpp  info.h  main.cpp
Persons/: CMakeLists.txt  account.cpp  account.h  admin.cpp  admin.h  customer.cpp  customer.h  main.cpp  person.cpp  person.h
SplitClassFIlesCourse/: Point.cpp  Point.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h  main.cpp
Students/: main.cpp  student.cpp  student.h  studentManager.cpp  studentManager.h
address/: CMakeLists.txt  address.cpp  address.h  address_manager.cpp  address_manager.h  hostname.cpp  hostname.h  main.cpp  subnet.cpp  subnet.h
car_project/: CMakeLists.txt  DB_Manager.cpp  DB_Manager.h  Login_Manager.cpp  Login_Manager.h  Notes.txt  aria100.cpp  aria100.h  ariaCar.cpp  ariaCar.h  ariaMovement.cpp  ariaMovement.h  carBody.cpp  carBody.h  main.cpp  manager.h  movement.h
myString/: CMakeLists.txt  Mystring.cpp  Mystring.h  main.cpp
shapes/: CMakeLists.txt  circle.cpp  circle.h  combinedShape.cpp  combinedShape.h  main.cpp  rectangle.cpp  rectangle.h  regularPolygon.cpp  regularPolygon.h  rightTriangle.cpp  rightTriangle.h  shapes.cpp  shapes.h  square.cpp  square.h  triangle.cpp  triangle.h
